--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <link rel="icon" type="image/svg+xml" href="/public/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Retaj Pastry</title>
+    <meta name="description" content="Online menu for Retaj restaurant" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Retaj Menu" />
+    <meta
+      property="og:description"
+      content="Online menu for Retaj restaurant"
+    />
+    <meta
+      property="og:image"
+      content="https://menu-retaj.vercel.app/logo.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1080" />
+    <meta property="og:image:height" content="1080" />
+    <meta property="og:url" content="https://menu-retaj.vercel.app" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Retaj Menu" />
+    <meta
+      name="twitter:description"
+      content="Online menu for Retaj restaurant"
+    />
+    <meta
+      name="twitter:image"
+      content="https://menu-retaj.vercel.app/logo.png"
+    />
   </head>
   <body>
     <div id="root"></div>
