--- a/index.html
+++ b/index.html
@@ -7,32 +7,30 @@
     <title>Retaj Pastry</title>
     <meta name="description" content="Online menu for Retaj restaurant" />
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="Retaj Menu" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://menu-retaj.vercel.app/" />
+    <meta property="og:title" content="Retaj Menu | منيو ريتاج" />
     <meta
       property="og:description"
-      content="Online menu for Retaj restaurant"
+      content="استمتع بأشهى المأكولات من مطعم ريتاج - من القلب للقلب"
     />
     <meta
       property="og:image"
-      content="https://menu-retaj.vercel.app/logo.png"
+      content="https://menu-retaj.vercel.app/logo-og.png"
     />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="1080" />
-    <meta property="og:image:height" content="1080" />
-    <meta property="og:url" content="https://menu-retaj.vercel.app" />
-    <meta property="og:type" content="website" />
 
-    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Retaj Menu" />
+    <meta name="twitter:title" content="Retaj Menu | منيو ريتاج" />
     <meta
       name="twitter:description"
-      content="Online menu for Retaj restaurant"
+      content="استمتع بأشهى المأكولات من مطعم ريتاج - من القلب للقلب"
     />
     <meta
       name="twitter:image"
-      content="https://menu-retaj.vercel.app/logo.png"
+      content="https://menu-retaj.vercel.app/logo-og.png"
     />
   </head>
   <body>
