--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <meta
       property="og:image"
-      content="https://menu-retaj.vercel.app/logo-og.png"
+      content="https://menu-retaj.vercel.app/logo-og.jpg"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -30,7 +30,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://menu-retaj.vercel.app/logo-og.png"
+      content="https://menu-retaj.vercel.app/logo-og.jpg"
     />
   </head>
   <body>
