edit for daitels description

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Retaj Menu | منيو ريتاج" />
     <meta
       property="og:description"
-      content="استمتع بأشهى المأكولات من مطعم ريتاج - من القلب للقلب"
+      content="استمتع بأشهى الحلويات من حلواني ريتاج - من القلب للقلب"
     />
     <meta
       property="og:image"
